# wincap

./: README.md  pyproject.toml
tests/: test_win_cap.py
win_cap/: __init__.py  __main__.py  capture.py
